--- a/first-website|portfolio/portfolio.html
+++ b/first-website|portfolio/portfolio.html
@@ -1,24 +1,20 @@
 <html>
     <head>
+        <title>Redd's Amazing Website - Portfolio</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-      <div id="AllContents">
+      <div id="all-contents">
         <nav>
-            <h1>Redd's Amazing Website</h1>
-            <ul id="NavUl">
-                <li class="NavLi">
-                    <a class="NavA" href="index.html">Home</a>
-                </li>
-                <li class="NavLi">
-                    <a class="NavA" href="portfolio.html">Portfolio</a>
-                </li>
-            </ul>
+            <h1 id="sidebar-name">Redd's Amazing Portfolio</h1>
+            <a href="index.html">Home</a>
+            <a href="portfolio.html">Portfolio</a>
         </nav>
         <main>
-            <div class="Content">
-                <h1 id="Portfolio">Portfolio</h1>
-                <ul id="Portfolio">
+            <div class="content">
+                <h1 id="portfolio">Portfolio</h1>
+                <ul id="portfolio">
                     <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                     <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                     <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
