message saying what you are pushing

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,18 @@
     <body>
       <div id="all-contents">
         <nav>
-            <h1 id="sidebar-name">Redd's Amazing Portfolio</h1>
-            <a href="index.html">Home</a>
-            <a href="portfolio.html">Portfolio</a>
+            <h1>Redd's Amazing Portfolio</h1>
+            <ul id="nav-ul">
+                <li class="nav-li">
+                    <a href="index.html"> Home </a>
+                </li>
+                <li class="nav-li">
+                    <a href="portfolio.html"> Portfolio </a>
+                </li>
+                <li class="nav-li">
+                    <a href="artpage.html"> Pixel Art </a>
+                </li>
+            </ul>
         </nav>
         <main>
             <div class="content">
