--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
             <nav>
                 <h1>Redd's Amazing Website</h1>
                 <ul id="nav-ul">
-                    <li id="nav-li">
-                        <a href="indexx.html"> Home </a>
+                    <li class="nav-li">
+                        <a href="index.html"> Home </a>
                     </li>
-                    <li id="nav-li">
+                    <li class="nav-li">
                         <a href="portfolio.html"> Portfolio </a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="artpage.html"> Pixel Art </a>
                     </li>
                 </ul>
             </nav>
