workspace/Michael-Odom-Redd-.github.io

--- a/artpagetwo.html
+++ b/artpagetwo.html
@@ -30,9 +30,9 @@
                 <h2>Page 1</h2>
                 <div>
                     <ul id="ul">
-                        <img id="art" src="">
-                        <img id="art" src="">
-                        <img id="art" src="">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/00ff0236765a69a.png">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/5b01f1ed0586caf.png">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/879b0270f7cfebb.png">
                         <a id="nextpage" href="artpage.html">Back</a>
                     </ul>
                 </div>
