--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body id="b">
         <div id="all-contents"> 
             <nav>
                 <h1>Redd's Amazing Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
-                        <a href="index.html"> Home </a>
+                        <a id="a" href="index.html"> Home </a>
                     </li>
                     <li class="nav-li">
-                        <a href="portfolio.html"> Portfolio </a>
+                        <a id="a" href="portfolio.html"> Portfolio </a>
                     </li>
                     <li class="nav-li">
-                        <a href="artpage.html"> Pixel Art </a>
+                        <a id="a" href="artpage.html"> Pixel Art </a>
                     </li>
                 </ul>
             </nav>
@@ -35,9 +35,9 @@
                     <div id="interests">
                         <h3>Interests</h3>
                         <ul>
-                            <li><a href="pixelartmaker.com/gallary/mokoloko">Pixel Art</a></li>
+                            <li><a id="a" href="pixelartmaker.com/gallary/mokoloko">Pixel Art</a></li>
                             <li>Video Games</li>
-                            <li><a href="https://www.khanacademy.org/">JavaScript</a></li>
+                            <li><a id="a" href="https://www.khanacademy.org/">JavaScript</a></li>
                             <li>Mathematics</li>
                         </ul>
                     </div>
