--- a/portfolio.html
+++ b/portfolio.html
@@ -4,19 +4,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body id="b">
       <div id="all-contents">
         <nav>
             <h1>Redd's Amazing Portfolio</h1>
             <ul id="nav-ul">
                 <li class="nav-li">
-                    <a href="index.html"> Home </a>
+                    <a id="a" href="index.html"> Home </a>
                 </li>
                 <li class="nav-li">
-                    <a href="portfolio.html"> Portfolio </a>
+                    <a id="a" href="portfolio.html"> Portfolio </a>
                 </li>
                 <li class="nav-li">
-                    <a href="artpage.html"> Pixel Art </a>
+                    <a id="a" href="artpage.html"> Pixel Art </a>
                 </li>
             </ul>
         </nav>
@@ -24,9 +24,9 @@
             <div class="content">
                 <h1 id="portfolio">Portfolio</h1>
                 <ul id="portfolio">
-                    <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
-                    <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
-                    <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+                    <li><a id="a" href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
+                    <li><a id="a" href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
+                    <li><a id="a" href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
                 </ul>
             </div>
         </main>
