workspace/Michael-Odom-Redd-.github.io

--- a/artpage.html
+++ b/artpage.html
@@ -33,7 +33,7 @@
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/c222e08eb0a7ed5.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/f7d8634c31a0242.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/39fa69a0070a84f.png">
-                        <img id="art" src="">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/8288a19b978645b.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/159cfc2d28bcb10.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/1396ef2638bdd1e.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/9473dc14e8e5561.png">
