/workspace/Michael-Odom-Redd-.github.io

--- a/QG.html
+++ b/QG.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Play QuantaGuard</title>
-        <link rel="stylesheet" href="quantaguard.js">
+        <link rel="script" href="quantaguard.js">
         
     </head>
     <body>
-        <script>
+        <script src="quantaguard.js">
             main();
         </script>
     </body>
