--- a/artpagetwo.html
+++ b/artpagetwo.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Redd's Amazing Pixel Art</title>
+        <title> Redd's Amazing Pixel Art </title>
         <link rel="stylesheet" href="art.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
     <div id="all-contents"> 
         <nav>
-            <h1>Redd's Amazing Pixel Art</h1>
+            <h1> Redd's Amazing Pixel Art </h1>
             <ul id="nav-ul">
                 <li class="nav-li">
                     <a href="index.html"> Home </a>
@@ -27,12 +27,27 @@
             
             <!-- Content section -->
             <div class="content">
-                <h2>Page 1</h2>
+                <h2 id="h2"> Page 2 </h2>
                 <div>
                     <ul id="ul">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/00ff0236765a69a.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/5b01f1ed0586caf.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/879b0270f7cfebb.png">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/598bac42f4d5bc1.png">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/e6675baa75a9324.png">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
+                        <img id="art" src="">
                         <a id="nextpage" href="artpage.html">Back</a>
                     </ul>
                 </div>
