--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
                     <li><a id="a" href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                     <li><a id="a" href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                     <li><a id="a" href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+                    <li><a id="a" href="QG.html">QuantaGuard : A defence game with a variety of enemies</a></li>
                 </ul>
             </div>
         </main>
