--- a/artpage.html
+++ b/artpage.html
@@ -49,6 +49,9 @@
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/172745238c169e2.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/0905da1b96be4a1.png">
                         <a id="nextpage" href="artpagetwo.html">Next</a>
+                        <div id="credit">
+                            <p>Konacro (first) and Mirrorshard (second) were both made my Molt as a favor for me</p>
+                        </div>
                     </ul>
                     
                 
