--- a/artpagetwo.html
+++ b/artpagetwo.html
@@ -35,8 +35,8 @@
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/879b0270f7cfebb.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/598bac42f4d5bc1.png">
                         <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/e6675baa75a9324.png">
-                        <img id="art" src="">
-                        <img id="art" src="">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/bf20c297e83804c.png">
+                        <img id="art" src="https://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/009830829b082d1.png">
                         <img id="art" src="">
                         <img id="art" src="">
                         <img id="art" src="">
@@ -49,6 +49,10 @@
                         <img id="art" src="">
                         <img id="art" src="">
                         <a id="nextpage" href="artpage.html">Back</a>
+                        <div id="credit">
+                            <p>Shadowsoul (fourth) and Haffoon (fifth) were made with a reference of Shoto from My Hero Academia anime.</p>
+                            <p>Crystalbloom (sixth) and Bloodbloom (seventh) were made with a reference of Cerise, a character made by DST</p>
+                        </div>
                     </ul>
                 </div>
             </div>
